--- a/style.css
+++ b/style.css
@@ -24,8 +24,42 @@ nav button{
     background-color: transparent;
     padding:4px 12px;
 }
-nav button img{
-    height: 21px;
+nav img{
+    height: 23px;
+    border-radius: 50%;object-fit: cover;
+}
+.profile{
+    position: relative;
+    display: inline-block;
+}
+.drop-content{
+    position:absolute;
+    display: block;
+    background-color: #ffffff;
+    z-index: 1;
+    margin-left: -150px;
+    margin-top: 7px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: left;
+    padding:0px;
+    color: black;
+    box-shadow: black 0px 1px 15px -9px;
+    border-radius: 9px;
+    overflow: hidden;
+    cursor: pointer;
+}
+.drop-content a{
+    padding: 8px 16px;
+    display: flex;
+    align-items: center;
+    width: 160px;
+    height: 37px;
+    font-size: 14px;
+    font-family: open sans;
+    
+}
+.drop-content a:hover{
+    background-color: #f8f8f8;
 }
 .body{
     width: 100%;
