--- a/details.css
+++ b/details.css
@@ -1,3 +1,50 @@
+*{
+    /* outline: 2px solid #97ff9e; */
+}
+.imageview{
+    position: fixed;
+    top:0;
+    left: 0;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    /* transform: translateY(-100px); */
+    transform: rotateX(90deg);
+    transition: 170ms;
+}
+.imageviewClose{
+    /* transform: translateY(0); */
+    transform: rotateX(0deg);
+    transition: 300ms;
+    
+}
+.innerImageview{
+    border-radius: 15px;
+    width: 80%;
+    height: 80%;
+    background-color: #00000085;
+    backdrop-filter: blur(2.3px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.innerImageview img{
+    height: 90%;
+    width: 90%;
+    object-fit: contain;
+}
+
+#closebtn{
+    position: absolute;
+    cursor: pointer;
+    right: 15px;
+    top: 15px;
+    width: 30px;
+    height: 30px;
+    object-fit: contain;
+}
 .details_con{
     margin-top: 50px;
     padding-left: 10px;
@@ -6,18 +53,22 @@
     display: flex;
 }
 .imageBox{
+    cursor: pointer;
     width: 433px;
     height: 433px;
     box-shadow: black 0px 0px 11px -7px;
     border-radius: 10px;
+    margin-right: 30px;
 }
 .imageBox img{
     width: inherit;
     height: inherit;
-    object-fit: contain;
+    object-fit: cover;
+    border-radius: 15px;
 }
 .details_box{
     margin-left: 30px;
+    width: 600px;
 }
 .details_box h2{
     font-family: "roboto";
@@ -30,7 +81,7 @@
 .details{
     margin-top: 15px;
     padding:10px;
-    background: #e7e7e7cc;
+    background: #100b2512;
     border-radius: 5px;
 }
 .details span{
@@ -44,7 +95,7 @@
     font-size: 18px;
 }
 .condition{
-    background-color: #e5feff;
+    /* background-color: #e5feff; */
 }
 .condition span{
     color: #50aba8;
@@ -74,11 +125,14 @@
     border: none;
     color: white;
     background-color: rgb(128, 128, 255);
-    border-radius: 3px;
+    border-radius: 25px;
+}
+footer{
+    margin-top: 20px;
 }
 #contact{
-    background-color: #008909;
+    background-color: #3c3f87;
 }
 #chat{
-    background-color: #0076d7;
+    background-color: #006dc7;
 }
