--- a/style.css
+++ b/style.css
@@ -96,6 +96,23 @@ nav img{
     justify-content: center;
     align-items: center;
 }
+.searchbar_body button{
+    width: 90px;
+    height: 35px;
+    cursor: pointer;
+    outline: none;
+    padding: 7px;
+    background-color: #7776eb;
+    color: #ffffff;
+    border: none;
+    border-radius: 0 5px 5px 0;
+    margin-right: 12px;
+}
+.searchbar_body img{
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
+}
 .searchbar{
     font-size: 16px;
     font-family: open sans;
@@ -127,6 +144,9 @@ nav img{
     border-radius: 0 5px 5px 0;
     margin-right:12px;
     height: 35px;
+}
+.searchbar_btn:hover{
+    background: linear-gradient(90deg,#7776eb,#4946ff);
 }
 .heading{
     width: 100%;
@@ -303,14 +323,37 @@ nav img{
     transition: 170ms;
 }
 .bg_img{
-    background-image: url("");
-    background-size: cover;
     height: 100vh;
 }
 footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: 130px;
-    background-color: #a10606;
+    background-color: rgb(16, 11, 37);
+    color: white;
+    font-family: jost;
+    font-size: 14px;
+    letter-spacing: 1px;
+}
+footer h5{
+    font-size: 17px;
+    letter-spacing: 1px;
+    margin-bottom: 3px;
+}
+footer img{
+    width: 50px;
+    margin-bottom: 7px;
+    /* filter: invert(); */
+    transition: 0.5s;
+}
+footer img:hover{
+    box-shadow: inset red 0 0 25px 0px;
+}
+footer div{
+    text-align: center;
 }
 @media only screen and (max-width: 1500px) {
     .container{
