--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe:ital@1&family=Lato&family=Major+Mono+Display&family=Montserrat:wght@600&family=Mulish&family=Open+Sans&family=Roboto:wght@500&family=Ubuntu:wght@300&family=Jost&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe:ital@1&family=Lato&family=Major+Mono+Display&family=Montserrat:wght@600&family=Mulish&family=Open+Sans&family=Roboto:wght@400&family=Ubuntu:wght@300&family=Jost&display=swap');
 
 *{
     box-sizing: border-box;
     padding:0;
     margin:0;
+    scroll-behavior: smooth;
 }
 
 nav{
@@ -14,7 +15,11 @@ nav{
     width: 100%;
     height: 55px;
     background-color: #ffffff;
-    box-shadow: 0 4px 12px 0 rgba(0,0,0,.07), 0 2px 4px rgba(0,0,0,.05);
+    box-shadow: 0 0px 12px 0px rgb(0 0 0 / 30%), 0 2px 4px rgba(0,0,0,.05);
+    
+    position: sticky;
+    top: 0;
+    z-index: 10;
 }
 nav button{
     display: flex;
@@ -24,11 +29,18 @@ nav button{
     background-color: transparent;
     padding:4px 12px;
 }
-nav img{
-    height: 23px;
-    border-radius: 50%;object-fit: cover;
+nav .avatar{
+    height: 27px;
+    border-radius: 50%;
+    object-fit: cover;
     cursor: pointer;
     margin-right: 4px;
+}
+nav .logo{
+    height: 40px;
+    border-radius: none;
+    object-fit: cover;
+    cursor: pointer;
 }
 .left_nav{
     display: flex;
@@ -176,9 +188,12 @@ nav img{
 }
 .card:hover{
     transition: 725ms;
-    box-shadow: #0087ff 3px 3px 17px -9px;
-    border-top: 1px solid rgb(76 235 255);
-    border-right: 1px solid rgb(112 211 219);
+    box-shadow: #ff0000 3px 3px 17px -9px;
+    border-top: 1px solid rgb(255, 76, 76);
+    border-right: 1px solid rgb(219, 112, 112);
+    /* box-shadow: #0087ff 3px 3px 17px -9px; */
+    /* border-top: 1px solid rgb(76 235 255); */
+    /* border-right: 1px solid rgb(112 211 219); */
 }
 .card .sub{
     position:absolute;
@@ -229,6 +244,10 @@ nav img{
     outline: none;
     border: none;
     border-radius: 3px;
+    transition: 0.2s;
+}
+.card:hover .innerbox button{
+    background-color: #ff5151;
 }
 .card .innerbox{
     display: flex;
