--- a/postpage.css
+++ b/postpage.css
@@ -25,6 +25,7 @@
     border-radius: 15px;
     color: #5c5c5c;
     margin: 10px;
+    background-size: cover;
 }
 .drag-drop a{
     color: #000000;
@@ -49,6 +50,11 @@
 .drag-drop p{
     font-size: 13px;
 }
+.drag-drop img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 .bookdetails{
     font-family: ubuntu;
     display: flex;
@@ -57,6 +63,7 @@
 }
 .bookdetails h1{
     margin-bottom: 10px;
+    margin-top: 10px;
 }
 .bookdetails label{
     font-family: jost;
@@ -92,7 +99,22 @@
     outline: none;
     margin: 10px 4px;
 }
+.bookdetails a{
+    cursor: pointer;
+    color: black;
+    text-align: center;
+}
 #nextdiv{
     display: flex;
+    justify-content: space-around;
+}
 
+.display_outer{
+    width: 100%;
+    overflow: hidden;
+}
+.display_inner{
+    transition: 1s;
+    width: 200%;
+    display: flex;
 }
