--- a/postpage.css
+++ b/postpage.css
@@ -118,3 +118,16 @@
     width: 200%;
     display: flex;
 }
+
+#selected{
+    width: 50px;
+    height: 50px;
+    margin-left: 10px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+#selectedheader{
+    align-items: center;
+    display: none;
+}
