--- a/postpage.css
+++ b/postpage.css
@@ -93,13 +93,16 @@
     cursor: pointer;
     padding: 10px 17px;
     color: white;
-    background-color: #004d8b;
+    background-image: linear-gradient(45deg, #000c51, #3F51B5);
     font-size: 20px;
     font-family: ubuntu;
     border: none;
     border-radius: 7px;
     outline: none;
     margin: 10px 4px;
+}
+.bookdetails button:hover{
+    background: #080f29;
 }
 .bookdetails a{
     cursor: pointer;
@@ -133,6 +136,39 @@
     align-items: center;
     display: none;
 }
+
+.loadingpost{
+    display: none;
+    font-family: open sans;
+    font-size: 27px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: #dbdbdba3;
+    position: fixed;
+    z-index: 10;
+    width: 100%;
+    height: 100%;
+}
+.loadingpost img{
+    width: 50px;
+    height: 50px;
+    object-fit: contain;
+}
+.loadingpost p{
+    font-family: jost;
+    font-size: 13px;
+    text-decoration: underline;
+}
+
+
+
+
+
+
+
+
+
 @media only screen and (max-width: 1000px) {
     .drag-drop{
         width: 360px;
