--- a/details.css
+++ b/details.css
@@ -31,8 +31,8 @@
     align-items: center;
 }
 .innerImageview img{
-    height: 90%;
-    width: 90%;
+    height: 98%;
+    width: 98%;
     object-fit: contain;
 }
 
@@ -49,15 +49,18 @@
     margin-top: 50px;
     padding-left: 10px;
     padding-right: 10px;
+    width: 100%;
     max-width: 1366px;
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
 }
 .imageBox{
     cursor: pointer;
     width: 433px;
     height: 433px;
-    box-shadow: black 0px 0px 11px -7px;
+    /* box-shadow: black 0px 0px 11px -7px; */
+    box-shadow: #c5c5c5 5px 5px 9px -3px;
     border-radius: 10px;
     margin-right: 30px;
 }
@@ -80,19 +83,27 @@
     font-family: lato;
 }
 .details{
-    margin-top: 15px;
+    /* margin: 15px 0;
     padding:10px;
     background: #100b2512;
-    border-radius: 5px;
+    border-radius: 5px; */
+    margin: 15px 0;
+    padding: 10px;
+    background: #ffffff;
+    outline: 1px solid #e7e7e7e1;
+    box-shadow: #b3b3b3b7 5px 5px 9px -3px;
+    border-radius: 0;
+    border: none;
+    border-left: 2px solid #2196F3;
 }
 .details span{
     font-family: roboto;
     font-size: 20px;
-    color: #858585;
+    color: #000000;
 }
 .details p{
     padding: 6px;
-    font-family: mulish;
+    font-family: ubuntu;
     font-size: 18px;
 }
 .condition{
@@ -129,7 +140,7 @@
     border-radius: 25px;
 }
 footer{
-    margin-top: 20px;
+    margin-top: auto;
 }
 #contact{
     background-color: #3c3f87;
@@ -153,7 +164,14 @@ footer{
         width:450px;
     }
 }
-
+@media screen and (max-width:930px) {
+    .innerImageview{
+        border-radius: 5px;
+        width: 100%;
+        height: 80%;
+        padding: 30px 4px;
+    }
+}
 @media screen and (max-width: 880px){
     .details_box{
         width: 335px;
@@ -166,7 +184,25 @@ footer{
     .details_box{
         margin: 10px;
     }
-    .details_con{
+    /* .details_con{
         justify-content: center;
+    } */
+}
+@media screen and (max-width:729px) {
+    .imageBox{
+        width: 250px;
+        height: 250px;
+    }
+}
+@media screen and (max-width:375px){
+    .purchase{
+        display: flex;
+    }
+    .purchase input{
+        width: 100%;
+    }
+    .imageBox{
+        width: 240px;
+        height: 225px;
     }
 }
