--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe:ital@1&family=Lato&family=Raleway&family=Major+Mono+Display&family=Montserrat:wght@600&family=Mulish&family=Open+Sans&family=Roboto:wght@400&family=Ubuntu:wght@300&family=Jost&family=DM+Sans:opsz@9..40&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe:ital@1&family=Lato&family=Raleway:wght@400;700&family=Major+Mono+Display&family=Rubik+Doodle+Shadow&family=Montserrat:wght@600&family=Mulish&family=Open+Sans&family=Roboto:wght@400&family=Ubuntu:wght@300&family=Jost:wght@400;500&family=DM+Sans:opsz@9..40&display=swap');
 
 *{
     box-sizing: border-box;
@@ -166,7 +166,7 @@ nav .logo{
 .heading{
     width: 100%;
     font-size: 20px;
-    font-family: 'roboto';
+    font-family: 'Rubik Doodle Shadow';
     font-weight: bold;
     padding-left: 20px;
 }
@@ -229,17 +229,20 @@ nav .logo{
 .card .details h5{
     font-size: 20px;
     margin-bottom: 8px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    width: 225px;
 }
 .card .details p{
     margin-bottom:19px;
     font-family: 'open sans';
     font-size: 16px;
     height: 70px;
+    width: 225px;
+    white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical;
 }
 .card .innerbox a{
     background-color: #0080ff;
@@ -261,6 +264,7 @@ nav .logo{
     display: flex;
     justify-content: space-around;
     align-items: center;
+    width: 209px;
 }
 .card .innerbox a{
     text-decoration: none;
@@ -272,7 +276,7 @@ nav .logo{
     align-items: baseline;
     background-color: rgb(255, 255, 255);
     color: #888888;
-    padding:7px 29px;
+    padding:7px;
     border-radius: 5px;
 }
 .nocontent{
@@ -370,8 +374,11 @@ footer{
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 130px;
-    background-color: rgb(16, 11, 37);
+    /* height: 130px; */
+    height: 199px;
+    /* background-color: rgb(16, 11, 37); */
+    /* background-color: rgb(93 0 0); */
+    background-color: #00161c;
     color: white;
     font-family: jost;
     font-size: 14px;
@@ -381,6 +388,10 @@ footer h5{
     font-size: 17px;
     letter-spacing: 1px;
     margin-bottom: 3px;
+    font-weight: 500;
+}
+footer p{
+    letter-spacing: 1.2px;
 }
 footer img{
     width: 50px;
