--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe:ital@1&family=Lato&family=Raleway:wght@400;700&family=Major+Mono+Display&family=Rubik+Doodle+Shadow&family=Montserrat:wght@600&family=Mulish&family=Open+Sans&family=Roboto:wght@400&family=Ubuntu:wght@300&family=Jost:wght@400;500&family=DM+Sans:opsz@9..40&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe:ital@1&family=Lato&family=Raleway:wght@400;700&family=Major+Mono+Display&family=Rubik+Doodle+Shadow&family=Montserrat:wght@600&family=Mulish&family=Open+Sans&family=Roboto:wght@400&family=Ubuntu:wght@300&family=Jost:wght@400;500;600&family=DM+Sans:opsz@9..40&display=swap');
 
 *{
     box-sizing: border-box;
@@ -145,7 +145,8 @@ nav .logo{
     z-index: 10;
     position: absolute;
     top: 35px;
-    font-family: roboto;
+    font-family: jost;
+    font-weight: 400;
     font-size: 16px;
     overflow: hidden;
     text-decoration: none;
@@ -221,6 +222,7 @@ nav .logo{
 }
 
 .card{
+    cursor: default;
     border-radius: 5px;
     overflow: hidden;
     display:flex;
@@ -257,12 +259,14 @@ nav .logo{
     text-overflow: ellipsis;
     overflow: hidden;
     background: #00000099;
+    backdrop-filter: blur(1px);
     transition-duration: 500ms;
 }
 .card img{
     object-fit: cover;
     width: 90px;
     transition: 470ms;
+    z-index: 1;
 }
 .card:hover img{
     filter: saturate(1.5) brightness(0.8);
@@ -284,6 +288,12 @@ nav .logo{
     text-overflow: ellipsis;
     overflow: hidden;
     width: 225px;
+    transition: 2s;
+}
+.card:hover .details h5{
+    overflow: visible;
+    width: 100%;
+    transform: translateX(calc(-100% + 224px));
 }
 .card .details p{
     margin-bottom:19px;
@@ -499,5 +509,14 @@ footer div{
 @media only screen and (max-width: 750px) {
     .container{
         width:calc(354*1px);
+    }
+    nav{
+        padding: 0 10px;
+    }
+    .search_container{
+        width: 100%;
+    }
+    .searchbar_body ul{
+        width: calc(100% - 24px);
     }
 }
