--- a/chat.css
+++ b/chat.css
@@ -4,6 +4,22 @@
     box-sizing: border-box;
     outline: none;
 }
+/* scrollbar */
+::-webkit-scrollbar {
+    width: 7px;
+  }
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 9px -3px rgb(18, 24, 36); 
+  }
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #707070; 
+  }
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #8198ff; 
+  }
 
 .container{
     display: flex;
@@ -11,6 +27,7 @@
     height: 100vh;
 }
 .people{
+    overflow-y: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -36,6 +53,7 @@
     border-bottom: 1px solid rgb(150, 150, 150);
 }
 .msg{
+    cursor: pointer;
     display: flex;
     margin: 5px;
     width: 80%;
@@ -61,6 +79,7 @@
     font-size: 15px;
 }
 .chatArea{
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     width: 80%;
@@ -82,7 +101,20 @@
     border-radius: 50%;
     margin: 0 10px;
 }
+.menu{
+    display: none;
+    cursor: pointer;
+}
+.menu_close{
+    padding: 10px;
+    padding-bottom: 5px;
+    display: none;
+    cursor: pointer;
+    align-self: self-end;
+    width: 50px;
+}
 .messageScroll{
+    overflow-y: auto;
     width: 100%;
     flex:1;
     display: flex;
@@ -90,12 +122,42 @@
     background-color: #4b4b4b;
 }
 .messageScroll div{
-    height: 60px;
-    width: 100%;
-    text-align: right;
+    display: flex;
+    flex-direction: column;
+    width: 350px;
+    font-size: 16px;
+    font-family: Verdana;
     color: white;
-    font-size: 24px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding: 7px 10px;
+}
+.m_right{
+    align-self: flex-end;
+    text-align: right;
+}
+.m_left{
+    align-self: flex-start;
+    text-align: left;
+}
+.messageScroll p{
+    font-size: 10px;
+    padding: 3px 0;
+    color: #b4b4b4;
+}
+.m_right div{
+    display: flex;
+    align-self: self-end;
+    width: fit-content;
+    padding: 10px;
+    background-color: #474699;
+    border-radius: 15px 15px 0 15px ;
+}
+.m_left div{
+    display: flex;
+    align-items: start;
+    width: fit-content;
+    padding: 10px;
+    background-color: #2b2b2b;
+    border-radius: 15px 15px 15px 0 ;
 }
 .typeArea{
     height: 60px;
@@ -130,14 +192,37 @@
     padding: 10px 17px;
 }
 .typeArea button{
+    cursor: pointer;
     width: 100px;
     height: 37px;
     padding: 0 15px;
     color: white;
-    background-color: #636363;
+    background-color: #474699;
     border-radius: 5px;
     border: none;
     outline: none;
     margin: 0 7px;
 
+}
+
+@media only screen and (max-width: 1100px) {
+    .people{
+        transition: 0.7s;
+        position: absolute;
+        left: 0;
+        width: 400px;
+        transform: translateX(-400px);
+    }
+    .menu_opened{
+        transform: translateX(0);
+    }
+    .chatArea{
+        width: 100%;
+    }
+    .menu{
+        display: block;
+    }
+    .menu_close{
+        display: block;
+    }
 }
