--- a/chat.css
+++ b/chat.css
@@ -31,7 +31,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 20%;
+    /* width: 20%; */
+    flex-grow: 0.1;
     background-color: #272727;
     height: 100%;
 }
@@ -77,12 +78,16 @@
 .people div span{
     font-family: monospace;
     font-size: 15px;
+    white-space: break-spaces;
+    height: 36px;
+    overflow: hidden;
 }
 .chatArea{
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    width: 80%;
+    /* width: 80%; */
+    flex-grow: 4;
 }
 .nav{
     display: flex;
@@ -228,5 +233,17 @@
     }
     .menu_close{
         display: block;
+    }
+}
+@media only screen and (max-width: 720px) {
+    .people{
+        transition: 0.7s;
+        position: absolute;
+        left: 0;
+        width: 100%;
+        transform: translateX(-100%);
+    }
+    .menu_opened{
+        transform: translateX(0);
     }
 }
