--- a/chat.css
+++ b/chat.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe:ital@1&family=Lato&family=Raleway:wght@400;700&family=Major+Mono+Display&family=Rubik+Doodle+Shadow&family=Montserrat:wght@600&family=Mulish&family=Open+Sans&family=Roboto:wght@400&family=Ubuntu:wght@300&family=Jost:wght@400;500;600&family=DM+Sans:opsz@9..40&display=swap');
+
 *,html{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     outline: none;
+    font-family: jost;
 }
 /* scrollbar */
 ::-webkit-scrollbar {
@@ -31,8 +34,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* width: 20%; */
-    flex-grow: 0.1;
+    width: 350px;
+    /* flex-grow: 0.1; */
     background-color: #272727;
     height: 100%;
 }
@@ -53,6 +56,7 @@
     width: 80%;
     border-bottom: 1px solid rgb(150, 150, 150);
 }
+
 .msg{
     cursor: pointer;
     display: flex;
@@ -60,15 +64,23 @@
     width: 80%;
     height: 50px;
     /* background-color: #2b2b2b; */
-    text-align: center;
+    text-align: left;
     color: aliceblue;
     /* justify-content: space-between; */
     align-items: center;
     border-radius: 7px;
-    padding: 9px;
+    padding: 5px;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-content: flex-start;
+    justify-content: center;
+
 }
 .msg:hover{
     background-color: #3a3a3a;
+}
+.people .self span{
+    width: fit-content;
 }
 .people div img{
     width: 30px;
@@ -76,19 +88,24 @@
     border-radius: 50%;
 }
 .people div span{
-    font-family: monospace;
+    /* font-family: monospace; */
     font-size: 15px;
     white-space: break-spaces;
-    height: 36px;
+    height: 40px;
+    width: 80%;
     overflow: hidden;
     padding-left: 14px;
+    display: flex;
+    align-items: center;
+    /* text-align: left; */
 }
+
 .chatArea{
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    /* width: 80%; */
-    flex-grow: 4;
+    width: calc(100% - 350px);
+    /* flex-grow: 4; */
 }
 .nav{
     display: flex;
@@ -97,7 +114,7 @@
     width: 100%;
     background-color: #313131;
     color: aliceblue;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    /* font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
 
 }
 .nav img{
@@ -132,7 +149,8 @@
     flex-direction: column;
     width: 350px;
     font-size: 16px;
-    font-family: Verdana;
+    /* font-family: Verdana; */
+    font-family: dm sans;
     color: white;
     padding: 7px 10px;
 }
@@ -179,7 +197,7 @@
     color: #888888;
     background-color: #4d4d4d;
     font-size: 20px;
-    font-family: 'Courier New', Courier, monospace;
+    /* font-family: 'Courier New', Courier, monospace; */
     font-weight: bolder;
     justify-content: center;
     align-items: center;
@@ -188,6 +206,7 @@
     margin: 0 7px;
 }
 .typeArea input{
+    font-family: dm sans;
     flex: 1;
     height: 37px;
     background-color: #535353;
