--- a/chat.css
+++ b/chat.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe:ital@1&family=Lato&family=Raleway:wght@400;700&family=Major+Mono+Display&family=Rubik+Doodle+Shadow&family=Montserrat:wght@600&family=Mulish&family=Open+Sans&family=Roboto:wght@400&family=Ubuntu:wght@300&family=Jost:wght@400;500;600&family=DM+Sans:opsz@9..40&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600&family=DM+Sans:opsz@9..40&display=swap');
 
 *,html{
     margin: 0;
@@ -245,7 +245,40 @@
     padding: 5px 10px;
     border-radius: 5px;
 }
+.return_btn:hover{
+    color:#dbdbdb;
+    background-color: #6b6b6b;
+}
 
+.img_viewer{
+    display: none;
+    z-index: 9;
+    position:fixed;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: #0d0d2767;
+    background-color: #2b2b5367;
+    backdrop-filter: blur(2px);
+}
+.img_viewer img{
+    z-index: 5;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    padding: 5px;
+}
+.img_viewer span{
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    color: white;
+    z-index: 10;
+}
+#chat_heading_img{
+    cursor: pointer;
+}
 @media only screen and (max-width: 1100px) {
     .people{
         transition: 0.7s;
