--- a/chat.css
+++ b/chat.css
@@ -137,12 +137,15 @@
     width: 50px;
 }
 .messageScroll{
+    /* background-image: url("https://www.toptal.com/designers/subtlepatterns/uploads/papyrus-dark.png"); */
+    background-image: url("https://www.toptal.com/designers/subtlepatterns/uploads/beanstalk-dark.png");
+    background-blend-mode: soft-light;
     overflow-y: auto;
     width: 100%;
     flex:1;
     display: flex;
     flex-direction: column;
-    background-color: #4b4b4b;
+    background-color: #656565;
 }
 .messageScroll div{
     display: flex;
@@ -180,7 +183,8 @@
     align-items: start;
     width: fit-content;
     padding: 10px;
-    background-color: #2b2b2b;
+    /* background-color: #2b2b2b; */
+    background-color: #414141;
     border-radius: 15px 15px 15px 0 ;
 }
 .typeArea{
