--- a/postpage.css
+++ b/postpage.css
@@ -169,10 +169,23 @@
 
 
 
+
 @media only screen and (max-width: 1000px) {
     .drag-drop{
         width: 360px;
         height: 380px;
+    }
+}
+@media only screen and (max-width: 400px) {
+    .drag-drop{
+        width: 300px;
+        height: 380px;
+    }
+    .bookdetails input{
+        width: 300px;
+    }
+    #dragheader{
+        font-size: 16px;
     }
 }
 
